# ECE1754_Project

./: .gitignore  CMakeLists.txt  PolyCheckDemo.cpp  README.md  polycheck_demo_utils.cpp  polycheck_demo_utils.h
Original_Code/: Makefile  input_code  input_code.cpp  instrumented_code.out
Original_Code/test_functions/: CMakeLists.txt  Instrumented_code.cpp  Original_Test.cpp  function_test.cpp  original_code.cpp  polycheck_demo_functions.h
demo/: CMakeLists.txt  Project  hand_made_code.cpp  instrument.sh  original_code.cpp  polycheck_demo_functions.h  rose_original_code.cpp
report/: references.bib  report.aux  report.bbl  report.blg  report.out  report.tex
